// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resizer [common] example testing should match snapshot(s) for basic 1`] = `
<div
  className="lucid-Resizer"
>
  <div>
    <div>
      Width: 
      0
    </div>
    <div>
      Height: 
      0
    </div>
  </div>
</div>
`;

exports[`Resizer [common] example testing should match snapshot(s) for with-flex 1`] = `
<div
  className="lucid-Resizer"
  style={
    Object {
      "flexGrow": 1,
      "overflow": "hidden",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid black",
        "height": 0,
        "width": 0,
      }
    }
  >
    <div>
      When using Resizer within a flexed container, its critical to add 
      <code>
        flexGrow: 1, overflow: 'hidden'
      </code>
       to its styles so it will behave correctly.
    </div>
    <div>
      Width: 
      0
    </div>
    <div>
      Height: 
      0
    </div>
  </div>
</div>
`;
